# ultron-trading

./: .gitignore  README.md  TESTPLAN.md
.hermes/plans/: 2026-06-26-stock-analysis-full.md  2026-06-27-090000-analysis-consensus-report.md  2026-06-27-analysis-audit-report.md  2026-06-27-news-sentiment-analysis.md  2026-06-28-090000-stock-charting-enhancement.md
backend/: main.py  pyproject.toml  test_api_import.py  test_engine.py  test_registry.py
backend/app/api/: analysis.py  analysis.py.backup  charts.py  market.py  search.py  stocks.py
backend/app/core/: logging_config.py  middleware.py
backend/app/services/: company_service.py  market_service.py  search_service.py
backend/app/services/analysis/: __init__.py  base.py  consensus.py  fundamental.py  llm_consensus.py  metadata.py  ml.py  news_fetcher.py  quantitative.py  quantitative.py.bak  quantitative.py.bak2  sentiment.py  sentiment_scorer.py  technical.py  utils.py
backend/app/services/export/: consensus_export.py
backend/tests/: conftest.py  test_analysis.py  test_charts.py  test_company.py  test_market.py  test_search.py  test_stocks.py
backend/tests/quantitative/: test_binomial_tree.py  test_heston.py  test_hull_white.py  test_quantitative_utils.py  test_vasicek.py
backend/ultron_trading_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
deploy/: ultron-trading-frontend.service  ultron-trading.service
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx  styles.css
frontend/src/api/: types.ts  (+3 more)
(+68 files in other folders)
