[project]
name = "ultron-trading-backend"
version = "0.5.0"
description = "Backend API for Ultron Trading"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "yfinance>=0.2.40",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/willykinfoussia/ultron-trading"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "httpx>=0.26.0",
]

[tool.uv.scripts]
start = "uvicorn app.main:app --host 0.0.0.0 --port 8080"
